# sap-ai-core-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  key.json.example  pyproject.toml  pytest.ini
config/: litellm_config.yaml
examples/: example_usage.py
integrations/: langflow-llm-component.py
scripts/: docker-entrypoint.sh  start.sh  stop.sh
src/: sap_openai_proxy.py
src/utils/: deployment_cache.py  sap_auth.py  sap_client.py  sap_provider.py
tests/: __init__.py  conftest.py  test_conversations.py  test_integration.py
